tests/asm/error/four_arg_malloc_free_pointer_error.s
.name "zork"
.comment "I'M ]ALIIIIVE"


#any operation that have 4 or more arg will have free error, pointer being freed was not allocated

le_12:

live	%1

liv: live %1,1,1,1	#
	